--- a/docker/Makefile
+++ b/docker/Makefile
@@ -43,7 +43,7 @@ image_names += ub-22.04-irods-clients-4.3.2
 image_names += ub-22.04-irods-clients-4.3.3
 # image_names += ub-22.04-irods-clients-4.3-nightly
 
-image_names += python-3.10-npg-porch
+image_names += python-3.10-npg-porch-2.0.0
 
 git_url=$(shell git remote get-url origin)
 git_commit=$(shell git log --pretty=format:'%H' -n 1)
